<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.AddPlaceFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/place_name_ask"
        android:id="@+id/place_name_textView"
        android:maxLines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/place_name_editText"
        android:layout_marginLeft="20dp"
        android:layout_alignBaseline="@+id/place_name_textView"
        android:layout_toRightOf="@+id/place_name_textView" />

    <TextView
        android:text="@string/place_desc_ask"
        android:id="@+id/place_descprition_textView"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/place_name_textView"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/place_description_editText"
        android:layout_below="@id/place_descprition_textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_ask"
        android:id="@+id/textviewNote"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/place_description_editText"/>


    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_below="@+id/textviewNote"
        android:layout_alignBaseline="@+id/textviewNote"
        android:layout_toRightOf="@+id/textviewNote" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_button"
        android:text="@string/ajout_lieu"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/ratingBar"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
</ScrollView>